<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_gap">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/album_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/album_name_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/album_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="8dp"
        android:text="@string/album_name_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_name_label_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/artist_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:text="@string/artist_name_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_name_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/album_artist_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="8dp"
        android:text="@string/artist_name_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name_label_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stremable_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:text="@string/streamable_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_artist_name_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/album_streamable_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="8dp"
        android:text="@string/streamable_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stremable_label_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mbid_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:text="@string/mbid_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_streamable_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/album_mbid_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="8dp"
        android:text="@string/mbid_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbid_label_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>